New FrostyBoy Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Age__c</fullName>
        <formula>TODAY() -  ( LastActivityDate )</formula>
        <label>Account Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <description>Enter here the Business Category</description>
        <label>Business Category</label>
        <picklist>
            <controllingField>Classification__c</controllingField>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Yoghurt Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream Parlor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pub/Clubs/Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Yoghurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toppings &amp; Syrups</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Pick one</description>
        <label>Classification</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <description>Complete here if the New Account is a Lead</description>
        <label>Interested in</label>
        <picklist>
            <controllingField>Account_Status__c</controllingField>
            <picklistValues>
                <fullName>Soft-Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen Yoghurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toppings and Syrups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosty Ice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service and Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Lost_Reason__c</fullName>
        <label>Lead Lost Reason</label>
        <picklist>
            <controllingField>Account_Status__c</controllingField>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_to_Competitor__c</fullName>
        <label>Lost to Competitor</label>
        <picklist>
            <controllingField>Account_Status__c</controllingField>
            <picklistValues>
                <fullName>Openheimmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Majors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pregel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Invoice_Number__c</fullName>
        <label>Machine Invoice Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Status__c</fullName>
        <label>Machine Status</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>FOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine__c</fullName>
        <description>Please specify the machine model here</description>
        <label>Machine</label>
        <picklist>
            <controllingField>Machine_Status__c</controllingField>
            <picklistValues>
                <fullName>Smach 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 1500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 2500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smach 2500P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 152</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 161</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor 430</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Mail_Sent__c</fullName>
        <label>Notification Mail Sent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Mail_Status__c</fullName>
        <formula>IMAGE( IF( NOT(ISBLANK(Notification_Mail_Sent__c)), &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Mail Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccountId__c</fullName>
        <label>ParentAccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Please place here the Machine Serial Number</description>
        <label>Serial Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stores__c</fullName>
        <label>Stores</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ttlchk_BSP__c</fullName>
        <label>ttlchk_BSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_Barcode__c</fullName>
        <label>ttlchk_Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_DPID__c</fullName>
        <externalId>true</externalId>
        <label>ttlchk_DPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_Listing_Type__c</fullName>
        <label>ttlchk_Listing_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ttlchk_searchType__c</fullName>
        <label>ttlchk_searchType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Status_Inactive</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Account Status - Inactive</label>
    </listViews>
    <listViews>
        <fullName>AllMyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All My Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Interested_In_Equipment</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.IS_PARNTER</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Interested_in__c</field>
            <operation>equals</operation>
            <value>Equipment &amp; Accessories</value>
        </filters>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Interested In Equipment</label>
    </listViews>
    <listViews>
        <fullName>Machine_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Account_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Machine Customer</value>
        </filters>
        <label>Machine Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLeadsThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>New Leads This Week</label>
    </listViews>
    <namedFilters>
        <fullName>Contract_Account</fullName>
        <active>true</active>
        <field>Contract.AccountId</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Account Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000h6MMAQ_00NO0000000oNcvMAE</fullName>
        <active>true</active>
        <field>Purchase__c.Supplier_Name__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Purchase_Supplier Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000h6WMAQ_00NO0000000nvbbMAA</fullName>
        <active>true</active>
        <field>Machine_Inventory__c.Customer__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Machine Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Machine Inventory_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000000h6WMAQ_00NO0000000nvbqMAA</fullName>
        <active>true</active>
        <field>Machine_Inventory__c.Distributor__c</field>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Machine Inventory_Distributor</name>
    </namedFilters>
    <validationRules>
        <fullName>Ownership_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Owner.Id  ==  $User.Id ,$Profile.Name  &lt;&gt; &apos;System Administrator&apos;  )</errorConditionFormula>
        <errorMessage>You cannot change the details if you are not an admin or the owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Account_Not_same_as_account_name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISNEW() ),Parent.Id =  Id)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>Account can&apos;t be it&apos;s parent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Store_Mandatory_if_Classification_Chain</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Classification__c,&apos;Chain&apos;),ISBLANK(Stores__c))</errorConditionFormula>
        <errorDisplayField>Stores__c</errorDisplayField>
        <errorMessage>Store number should be populated for Chain</errorMessage>
    </validationRules>
</CustomObject>